crates/termist-tui/src/snapshots/termist_tui__ui__tests__grid_with_cards_and_pane.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 60, 16).backend()"
---
" termist   orbit-api ◆1✓1                             12:00 "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮            "
"┃◆ claude-1            ┃│✓ shell-2             │            "
"┃claude · waiting      ┃│shell · done          │            "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯            "
"┌ claude-1 — claude ───────────────────────────────────────┐"
"│hello                                                     │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"? help · p new task · Space follow-up · / sessions · n agent"
