crates/termist-tui/src/snapshots/termist_tui__ui__tests__keys.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 80, 16).backend()"
---
" termist   orbit-api ◆1✓1                                                 12:00 "
"┏━━━┌ keys ────────────────────────────────────────────────────────────────┐    "
"┃◆ c│ grid  b              new task: prompt, CLI, model                    │    "
"┃cla│ grid  Space          send the next instruction without entering      │    "
"┗━━━│ grid  Enter          type into the selected session                  │    "
"┌ cl│ grid  /              find a session                                  │───┐"
"│hel│ grid  .              next session that needs you                     │   │"
"│   │ grid  ,              previous session that needs you                 │   │"
"│   │ grid  n              new agent session                               │   │"
"│   │ grid  t              new shell                                       │   │"
"│   │ grid  P              new task like the card, in its worktree         │   │"
"│   │ grid  W              the worktrees: show, hide, remove               │   │"
"│   │ grid  X              remove the worktree; the branch stays           │   │"
"│   │ b: new task: prompt, CLI, model                                      │   │"
"└───└──────────────────────────────────────────────────────────────────────┘───┘"
"j/k choose · Enter new key · Backspace no key · R default · Esc back            "
