crates/termist-tui/src/snapshots/termist_tui__ui__tests__mercek_tree_alone.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 80, 14).backend()"
---
" termist pull requests   orbit-api ◆1✓1⇄1                                 12:00 "
" #212 Add a dealer filter to search                        unified · 3/4 viewed "
"┌ files ───────────────────────────────────────────────────────────────────────┐"
"│ ▾ public/                                                                    │"
"│   ✓ A logo.png                                                               │"
"│ ▾ src/                                                                       │"
"│   ▾ api/                                                                     │"
"│     ✓ M client.ts                                                           1│"
"│   ▾ search/                                                                  │"
"│       A DealerFilter.tsx                                                    1│"
"│ ✓ M README.md                                                                │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"#212 · Tab panel · J/K file · {/} hunk · v range · c comment · r reply · ^R view"
