crates/termist-tui/src/snapshots/termist_tui__ui__tests__open_project_browser.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 70, 16).backend()"
---
" termist   orbit-api ◆1✓1                                             "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮                      "
"┃◆ claude-1            ┃│✓ shell-2             │                      "
"┃claude · waiting      ┃│shell · done          │                      "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯                      "
"┌ c┌ open project · / ────────────────────────────────────────────┐──┐"
"│he│>                                                             │  │"
"│  │ orbit-api  /x                                                │  │"
"│  │   notes/                                                     │  │"
"│  │ ● orbit-web/                                                 │  │"
"│  └──────────────────────────────────────────────────────────────┘  │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
"type to filter · Enter open · → in · ← up · Tab open this folder · Esc"
