crates/termist-tui/src/snapshots/termist_tui__ui__tests__palette_over_the_grid.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 70, 16).backend()"
---
" termist   orbit-api ◆1✓1                                       12:00 "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮                      "
"┃◆ claude-1            ┃│✓ shell-2             │                      "
"┃claude · waiting      ┃│shell · done          │                      "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯                      "
"┌ c┌ sessions ────────────────────────────────────────────────────┐──┐"
"│he│>                                                             │  │"
"│  │ ◆ orbit-api      claude-1                 claude · waiting   │  │"
"│  │ ✓ orbit-api      shell-2                  shell · done       │  │"
"│  └──────────────────────────────────────────────────────────────┘  │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
"type to filter · ↑/↓ choose · Enter go there · Esc close              "
