crates/termist-tui/src/snapshots/termist_tui__ui__tests__pane_left.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 80, 12).backend()"
---
" termist   orbit-api ◆1✓1                                                 12:00 "
"┌ claude-1 — claude ───────────────────────────────────┐┏━━━━━━━━━━━━━━━━━━━━━━┓"
"│hello                                                 │┃◆ claude-1            ┃"
"│                                                      │┃claude · waiting      ┃"
"│                                                      │┗━━━━━━━━━━━━━━━━━━━━━━┛"
"│                                                      │╭──────────────────────╮"
"│                                                      ││✓ shell-2             │"
"│                                                      ││shell · done          │"
"│                                                      │╰──────────────────────╯"
"│                                                      │                        "
"└──────────────────────────────────────────────────────┘                        "
"? help · p new task · Space follow-up · / sessions · n agent · t shell · Enter f"
