crates/termist-tui/src/snapshots/termist_tui__ui__tests__pr_conversation.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 90, 28).backend()"
---
" termist pull requests   orbit-api ◆1✓1⇄1                                           12:00 "
" Add a dealer filter to search                                                            "
" bob wants to merge feat into main · +184 −32 · 9 files · opened 1d ago                   "
" ◇ your review · ✓ checks · +184 −32 · 9 files                                            "
"  Overview   Conversation 4   Checks 3   Files 2                                          "
"──────────────────────────────────────────────────────────────────────────────────────────"
"┃ src/api/client.ts:10 · resolved · 1 comment  ▸ Enter                                    "
"                                                                                          "
"┃ bob · 3h ago                                                                            "
"┃   Screenshots attached [image: before]                                                  "
"                                                                                          "
"┃ src/search/DealerFilter.tsx:42 · open · 2 comments                                      "
"┃     40 │   const dealers = useDealers();                                                "
"┃     41 │   const [sel, setSel] = useState<string>();                                    "
"┃     42 │ + useEffect(() => fetchAll(), []);                                             "
"┃   carol · 1h ago                                                                        "
"┃     This refetches on every mount, can we memoize?                                      "
"┃   bob · 40m ago                                                                         "
"┃     Good catch, will fix.                                                               "
"                                                                                          "
"┃ ✓ carol approved · 1h ago                                                               "
"┃   Looks good, one nit below.                                                            "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"#212 · j/k item · n/N thread · Enter fold · c comment · r reply · x resolve · e/D yours · "
