crates/termist-tui/src/snapshots/termist_tui__ui__tests__pr_overview.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 90, 16).backend()"
---
" termist pull requests   orbit-api ◆1✓1⇄1                                           12:00 "
" Add a dealer filter to search                                                            "
" bob wants to merge feat into main · +184 −32 · 9 files · opened 1d ago                   "
" ◇ your review · ✓ checks · +184 −32 · 9 files                                            "
"  Overview   Conversation 4   Checks 3   Files 2                                          "
"──────────────────────────────────────────────────────────────────────────────────────────"
" Adds a dealer dropdown to the search page.                                               "
"                                                                                          "
" Closes #198.                                                                             "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"#212 · Tab section · j/k scroll · d diff · c comment · A review · b browser · R refresh · "
